--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "react-icons": "^4.12.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "24.0.13",
+    "@types/react": "19.1.8",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
-    "typescript": "^5"
+    "typescript": "5.8.3"
   }
 }
